download/jfrog/custom/xray-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xray
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: xray.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xray
                port:
                  number: 8082
